--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.5rem;
   text-align: center;
+  --primary: #ecb465;
+  --primary-hover: #e5b776;
+  --form-element-active-border-color: #e9bf83;
+  --form-element-focus-color: #f0cc9a93;
+  --h1-color: #f1ebe3;
+  --h4-color: #f1ebe3;
 }
-
+.page-title {
+  margin: 0;
+}
+/* article {
+  padding-right: 0;
+  padding-left: 0;
+} */
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -31,10 +43,6 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
 }
 
 .read-the-docs {
